Fix padding on mobile white boxes

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -188,6 +188,9 @@ p a {
   }
   section {
     padding: 2rem 1rem;
+    &.white-box {
+      padding: 1rem;
+    }
   }
   .white-box {
     margin-left: 1rem;
